--- a/HelloWorld.ipynb
+++ b/HelloWorld.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "85bb96b6-d26c-4301-b6a5-a715d23be6a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Hello World\"\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Hello World\""
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3fbff1c-e480-4688-9f21-33c3bb90c558",
+   "metadata": {},
+   "source": [
+    "print(\"Hello World\") Prints \"Hello WOrld\""
    ]
   }
  ],
